starting to refactor functions and other code

--- a/CCDimage.ipynb
+++ b/CCDimage.ipynb
@@ -46,7 +46,8 @@
     "sys.path.append('/home/photon/code/PylonCCD')\n",
     "import serial\n",
     "import time\n",
-    "import datetime"
+    "import datetime\n",
+    "import Qfunction as Qfunc"
    ]
   },
   {
@@ -62,46 +63,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "def qfuncimage(array,bins=10,dolog=False,scaling=1.0):\n",
-    "    x = scaling*np.imag(array) # x is first dim. so imshow has it vertical\n",
-    "    y = scaling*np.real(array) # y is second dim. so imshow has it horizontal\n",
-    "\n",
-    "    H, xe, ye = np.histogram2d(x,y,bins)\n",
-    "    extent = [ye[0], ye[-1], xe[0], xe[-1]] # flipped axes since original\n",
-    "    #print extent\n",
-    "    fig = plt.figure()\n",
-    "    ax = plt.gca()\n",
-    "    ax.set_aspect('equal')\n",
-    "    # dolog takes the log of the histogram to show subtle values\n",
-    "    if dolog:\n",
-    "        H = np.log(H+0.1)\n",
-    "    #extent_scaled = [i*scaling for i in extent]\n",
-    "    plt.imshow(H, origin=\"lower\", extent=extent, interpolation='nearest', cmap = 'jet')\n",
-    "    plt.colorbar()\n",
-    "    plt.xticks((ye[-1],0,ye[0]))\n",
-    "    plt.yticks((xe[0],0,xe[-1]))\n",
-    "    plt.xlabel(r'Real($ \\alpha $)')\n",
-    "    plt.ylabel(r'Imag($ \\alpha $)')\n",
-    "    plt.title(\"Q function\")\n",
-    "\n",
-    "    return fig"
+    "\"\"\" Set up lists to hold the analysis output, only call this cell to clear the data before a new round of collection \"\"\"\n",
+    "output = []"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import Qfunction as Qfunc"
+    "### Setup communication with the Camserver (being refactored into DLutil/DLcamclient)"
    ]
   },
   {
@@ -123,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -169,18 +145,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "\"\"\" Set up lists to hold the analysis output, only call this cell to clear the data before a new round of collection \"\"\"\n",
-    "output = []"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -211,6 +175,7 @@
    },
    "outputs": [],
    "source": [
+    "#TODO: refactor these into a single utility module\n",
     "def saveQfig(root_path = \"/home/photon/Dropbox/Data/\"):\n",
     "    \"\"\"\n",
     "    Save Qfig data as .png of qfunc and .npy of array of complex max values of fft's\n",
@@ -238,6 +203,7 @@
    },
    "outputs": [],
    "source": [
+    "#TODO: refactor into utility module\n",
     "def saveRaw(root_path = \"/home/photon/data/\"):\n",
     "    \"\"\"\n",
     "    Save Raw zipped data as .npz of array of complex max values of fft's\n",
@@ -257,14 +223,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "import serial"
+    "### Setup and test the arduino-controlled shutter"
    ]
   },
   {
@@ -277,15 +239,10 @@
    "source": [
     "shutter = serial.Serial(\"/dev/ttyACM1\")\n",
     "def sigOpen():\n",
-    "    # add power control to servo\n",
-    "    # power on\n",
     "    shutter.write(\"b\\n\")\n",
-    "     # step back one to reduce buzz from undershoot\n",
-    "    # power off\n",
-    "    \n",
+    "   \n",
     "def sigClose():\n",
-    "    shutter.write(\"a\\n\")\n",
-    " "
+    "    shutter.write(\"a\\n\")"
    ]
   },
   {
