--- a/Correlation vs mode number.ipynb
+++ b/Correlation vs mode number.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -27,10 +25,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
     "mpl.rcParams['figure.figsize'] = (12.0, 6.0)"
@@ -38,37 +34,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/photon/data/06-15-2015\n"
+      "/home/photon/data/05-30-2018\n"
      ]
     }
    ],
    "source": [
-    "cd \"/home/photon/data/06-15-2015\""
+    "cd \"/home/photon/data/05-30-2018\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10-42-54_raw.npz  14-51-17_raw.npz  15-10-41_raw.npz  15-22-22_raw.npz\r\n",
-      "10-43-49_raw.npz  15-05-31_raw.npz  15-11-35_raw.npz\r\n",
-      "14-50-22_raw.npz  15-06-26_raw.npz  15-21-28_raw.npz\r\n"
+      "10-52-53_raw.npz  11-11-58_raw.npz  11-31-08_raw.npz  14-18-18_raw.npz\r\n",
+      "11-00-35_raw.npz  11-17-49_raw.npz  11-36-56_raw.npz\r\n",
+      "11-06-22_raw.npz  11-24-20_raw.npz  11-42-01_raw.npz\r\n"
      ]
     }
    ],
@@ -79,9 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 118,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "vac_file = np.load(\"15-21-28_raw.npz\")\n",
@@ -98,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 119,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "modeA = 204\n",
@@ -129,9 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 120,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the complex correlation matrix between each mode.\n",
@@ -152,9 +138,7 @@
   {
    "cell_type": "code",
    "execution_count": 121,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the correlation matrix between magnitude of each mode.\n",
@@ -194,9 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -226,9 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -258,9 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -290,9 +268,7 @@
   {
    "cell_type": "code",
    "execution_count": 126,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -322,9 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -356,9 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -383,9 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -419,9 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -454,9 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -497,6 +463,7 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -512,9 +479,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
